integrating sources
Kind of a mess... There is too much to work on here.