@@ -10,17 +10,17 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 and limitations under the License.
  */
 package textdisplay;
-import static java.lang.Class.forName;
-import static java.lang.Thread.currentThread;
+import java.io.IOException;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import static java.util.logging.Level.INFO;
-import static java.util.logging.Level.SEVERE;
-import static java.util.logging.Logger.getLogger;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 import org.apache.commons.dbcp.BasicDataSource;
-import static textdisplay.Folio.getRbTok;
+
+import tokens.TokenManager;
 
 
 
@@ -37,7 +37,7 @@ public class DatabaseWrapper
             try {
             // The newInstance() call is a work around for some
             // broken Java implementations
-            forName("com.mysql.jdbc.Driver").newInstance();
+            Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 // handle the error
             }
@@ -49,25 +49,27 @@ public class DatabaseWrapper
     {
         try
             {
+            TokenManager man = new TokenManager();
             if(d==null)
             {
                 d=new BasicDataSource();
-        d.setDriverClassName("com.mysql.jdbc.Driver");
-        d.setUrl("jdbc:mysql://"+getRbTok("DATABASE")+"?useUnicode=true&amp;characterEncoding=utf8&amp;max_allowed_packet=16M");
-        d.setUsername(getRbTok("DBUSER"));
-        d.setPassword(getRbTok("DBPASSWORD"));
-        d.setInitialSize(40);
-        d.setMaxActive(40);
-        d.setValidationQuery("select 1");
+                d.setDriverClassName("com.mysql.jdbc.Driver");
+                d.setUrl("jdbc:mysql://"+man.getProperties().getProperty("DATABASE"));
+                d.setUsername(man.getProperties().getProperty("DBUSER"));
+                d.setPassword(man.getProperties().getProperty("DBPASSWORD"));
+                d.setInitialSize(40);
+                d.setMaxActive(40);
+                d.setValidationQuery("select 1");
             }
-            StackTraceElement [] stack=currentThread().getStackTrace();
+            StackTraceElement [] stack=Thread.currentThread().getStackTrace();
             String stackdump="";
             return d.getConnection();
             } catch (SQLException ex)
-            {
-            getLogger(DatabaseWrapper.class.getName()).log(SEVERE, null, ex);
+        {
+            Logger.getLogger(DatabaseWrapper.class.getName()).log(Level.SEVERE, null, ex);
             return null;
-            }
+        }
+
     }
     
     /**Close the db connection, catching a potentially useless error and ignoring nulls*/
@@ -82,7 +84,7 @@ public class DatabaseWrapper
         }
         catch(SQLException e)
         {
-            getLogger(DatabaseWrapper.class.getName()).log(INFO, "Failed to close db connection\n");
+            Logger.getLogger(DatabaseWrapper.class.getName()).log(Level.INFO, "Failed to close db connection\n");
         }
     }
     /**Close a preparedstatement, ignoring the potential for a sql exception because there is nothing to be done about it*/
@@ -94,7 +96,7 @@ public class DatabaseWrapper
         }
         catch(SQLException e)
         {
-            getLogger(DatabaseWrapper.class.getName()).log(INFO, "Failed to close prepared statement\n");
+            Logger.getLogger(DatabaseWrapper.class.getName()).log(Level.INFO, "Failed to close prepared statement\n");
         }
     }
     /**Close a resultset, ignoring the potential for a sql exception because there is nothing to be done about it*/
@@ -106,7 +108,7 @@ public class DatabaseWrapper
         }
         catch(SQLException e)
         {
-            getLogger(DatabaseWrapper.class.getName()).log(INFO, "Failed to close result set\n");
+            Logger.getLogger(DatabaseWrapper.class.getName()).log(Level.INFO, "Failed to close result set\n");
         }
         
     }
